--- a/pages/services.html
+++ b/pages/services.html
@@ -1,10 +1,10 @@
-<!-- services.html -->
+<!-- ---- /services.html ---- -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Our services</title>
+  <title>Services</title>
   <script src="https://cdn.tailwindcss.com"></script>
   <script>
     tailwind.config = {
@@ -17,6 +17,7 @@
       }
     };
   </script>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;800&display=swap" rel="stylesheet">
 </head>
 <body class="bg-gray-50 text-gray-800 font-sans">
@@ -24,20 +25,34 @@
   <!-- Header -->
   <header class="sticky top-0 bg-white shadow z-50">
     <div class="max-w-7xl mx-auto px-4 py-4 flex justify-between items-center">
-      <a href="index.html" class="hover:opacity-80 transition">
+      <a href="index.html" class="flex items-center gap-2 hover:opacity-80 transition">
+        <img src="assets/logo.png" alt="Logo" class="h-10 w-auto">
         <h1 id="company-name" class="text-2xl font-bold text-blue-700">Loading...</h1>
       </a>
-      <nav class="space-x-6 text-sm font-semibold">
-        <a href="#" class="hover:text-blue-700">Services</a>
-        <a href="projects.html" class="hover:text-blue-700">Projects</a>
-        <a href="contact.html" class="hover:text-blue-700">Contact</a>
-      </nav>
+      <div class="flex items-center space-x-6">
+        <nav class="hidden md:flex space-x-6 text-sm font-semibold">
+          <a href="services.html" class="text-blue-700 font-semibold">Services</a>
+          <a href="projects.html" class="hover:text-blue-700">Projects</a>
+          <a href="contact.html" class="hover:text-blue-700">Contact</a>
+        </nav>
+        <a href="tel:+1234567890" id="company-phone-link" class="hidden md:block font-bold text-blue-700">Call Us</a>
+        <a href="contact.html" class="bg-blue-700 text-white px-4 py-2 rounded shadow hover:bg-blue-800 transition">Get a Quote</a>
+      </div>
     </div>
   </header>
+
+  <!-- Hero Section -->
+  <section class="bg-blue-700 text-white py-24 text-center">
+    <div class="max-w-3xl mx-auto px-4">
+      <h2 class="text-4xl md:text-5xl font-extrabold mb-4">Our Services</h2>
+      <p class="text-lg md:text-xl">Comprehensive solutions for residential and commercial projects.</p>
+    </div>
+  </section>
+
   <!-- Services Section -->
   <section id="services" class="py-20 bg-white">
     <div class="max-w-6xl mx-auto px-4 text-center">
-      <h3 class="text-3xl font-bold mb-12">Our Services</h3>
+      <h3 class="text-3xl font-bold mb-12">What We Offer</h3>
       <div id="services-container" class="grid md:grid-cols-2 gap-10 text-left">
         <!-- Services will load here -->
       </div>
@@ -51,41 +66,43 @@
 
   <!-- Script to Load JSON -->
   <script>
-    async function loadCompanyInfo() {
-      jsonFileDir = '../jsonfiles/';
-      const companyRes = await fetch(`${jsonFileDir}companyinfo.json`);
-      const companyData = await companyRes.json();
-      const servicesRes = await fetch(`${jsonFileDir}services.json`);
-      const servicesData = await servicesRes.json();
+    async function loadServices() {
+      const jsonFileDir = '../jsonfiles/';
+      try {
+        const companyRes = await fetch(`${jsonFileDir}companyinfo.json`);
+        const companyData = await companyRes.json();
 
+        const servicesRes = await fetch(`${jsonFileDir}services.json`);
+        const servicesData = await servicesRes.json();
 
-      // Merge data
-      const data = {
-        ...companyData,
-        services: servicesData.services,
-      };
+        // Company info
+        document.getElementById('company-name').innerText = companyData.name;
+        document.getElementById('company-name-footer').innerText = companyData.name;
+        document.getElementById('company-phone-link').href = `tel:${companyData.phone}`;
 
-      // Company name
-      document.getElementById('company-name').innerText = data.name;
-      document.getElementById('company-name-footer').innerText = data.name;
+        // Services
+        const serviceContainer = document.getElementById('services-container');
+        servicesData.services.forEach(service => {
+          const div = document.createElement('div');
+          div.className = "bg-white shadow rounded p-6 hover:shadow-lg transition";
 
-      // Services
-      const serviceContainer = document.getElementById('services-container');
-      servicesData.services.forEach(service => {
-        const div = document.createElement('div');
-        div.className = "bg-gray-100 p-6 rounded shadow";
-        div.innerHTML = `
-          <h4 class="text-xl font-semibold mb-2">${service.title}</h4>
-          <p>${service.longDescription}</p>`;
-        serviceContainer.appendChild(div);
-      });
+          div.innerHTML = `
+            <div class="text-blue-700 mb-4">
+              <i class="${service.icon || 'fa-solid fa-briefcase'} text-3xl"></i>
+            </div>
+            <h4 class="text-xl font-semibold mb-2">${service.title}</h4>
+            <p class="text-gray-600">${service.longDescription}</p>
+          `;
 
-
+          serviceContainer.appendChild(div);
+        });
+      } catch (err) {
+        console.error("Error loading services:", err);
+      }
     }
 
-    window.onload = loadCompanyInfo;
+    window.onload = loadServices;
   </script>
 
 </body>
 </html>
-
