--- a/pages/contact.html
+++ b/pages/contact.html
@@ -1,108 +1,130 @@
-<!-- contact.html -->
+<!-- ---- /contact.html ---- -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Contact Us</title>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+  <title>Contact</title>
   <script src="https://cdn.tailwindcss.com"></script>
-  
+  <script>
+    tailwind.config = {
+      theme: {
+        extend: {
+          fontFamily: {
+            sans: ['Inter', 'sans-serif'],
+          }
+        }
+      }
+    };
+  </script>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;800&display=swap" rel="stylesheet">
 </head>
 <body class="bg-gray-50 text-gray-800 font-sans">
 
-
-    <!-- Header -->
+  <!-- Header -->
   <header class="sticky top-0 bg-white shadow z-50">
     <div class="max-w-7xl mx-auto px-4 py-4 flex justify-between items-center">
-      <a href="index.html" class="hover:opacity-80 transition">
+      <a href="index.html" class="flex items-center gap-2 hover:opacity-80 transition">
+        <img src="assets/logo.png" alt="Logo" class="h-10 w-auto">
         <h1 id="company-name" class="text-2xl font-bold text-blue-700">Loading...</h1>
       </a>
-      <nav class="space-x-6 text-sm font-semibold">
-        <a href="services.html" class="hover:text-blue-700">Services</a>
-        <a href="projects.html" class="hover:text-blue-700">Projects</a>
-        <a href="contact.html" class="hover:text-blue-700">Contact</a>
-      </nav>
+      <div class="flex items-center space-x-6">
+        <nav class="hidden md:flex space-x-6 text-sm font-semibold">
+          <a href="services.html" class="hover:text-blue-700">Services</a>
+          <a href="projects.html" class="hover:text-blue-700">Projects</a>
+          <a href="contact.html" class="text-blue-700 font-semibold">Contact</a>
+        </nav>
+        <a href="tel:+1234567890" id="company-phone-link" class="hidden md:block font-bold text-blue-700">Call Us</a>
+        <a href="contact.html" class="bg-blue-700 text-white px-4 py-2 rounded shadow hover:bg-blue-800 transition">Get a Quote</a>
+      </div>
     </div>
   </header>
 
-  <!-- Contact Form -->
-  <section class="py-20 bg-white">
+  <!-- Hero Section -->
+  <section class="bg-blue-700 text-white py-24 text-center">
     <div class="max-w-3xl mx-auto px-4">
-      <h2 class="text-3xl font-bold text-center mb-8">Get in Touch</h2>
-      <form id="contact-form" method="POST" class="bg-gray-100 p-8 rounded shadow space-y-6">
-        <input type="hidden" name="_captcha" value="false">
-
-        <!-- Name -->
-        <div>
-          <label for="name" class="block text-sm font-medium mb-1">Your Name</label>
-          <input type="text" id="name" name="name" required class="w-full border border-gray-300 rounded px-4 py-2 focus:outline-none focus:ring-2 focus:ring-blue-500">
-        </div>
-
-        <!-- Email -->
-        <div>
-          <label for="email" class="block text-sm font-medium mb-1">Your Email</label>
-          <input type="email" id="email" name="email" required class="w-full border border-gray-300 rounded px-4 py-2 focus:outline-none focus:ring-2 focus:ring-blue-500">
-        </div>
-
-        <!-- Subject -->
-        <div>
-          <label for="subject" class="block text-sm font-medium mb-1">Subject</label>
-          <input type="text" id="subject" name="subject" class="w-full border border-gray-300 rounded px-4 py-2 focus:outline-none focus:ring-2 focus:ring-blue-500">
-        </div>
-
-        <!-- Message -->
-        <div>
-          <label for="message" class="block text-sm font-medium mb-1">Message</label>
-          <textarea id="message" name="message" rows="5" required class="w-full border border-gray-300 rounded px-4 py-2 focus:outline-none focus:ring-2 focus:ring-blue-500"></textarea>
-        </div>
-
-        <!-- Submit Button -->
-        <div class="text-center">
-          <button type="submit" class="bg-blue-700 text-white font-bold py-2 px-6 rounded hover:bg-blue-800 transition">Send Message</button>
-        </div>
-      </form>
+      <h2 class="text-4xl md:text-5xl font-extrabold mb-4">Contact Us</h2>
+      <p class="text-lg md:text-xl">We’d love to hear from you — let’s talk about your project!</p>
     </div>
   </section>
+
+  <!-- Contact Section -->
+  <main class="max-w-6xl mx-auto px-4 py-20 grid grid-cols-1 md:grid-cols-2 gap-12">
+    <!-- Contact Form -->
+    <div>
+      <h3 class="text-2xl font-bold mb-6">Send Us a Message</h3>
+      <form id="contact-form" method="POST" class="bg-white shadow rounded-lg p-6 space-y-4">
+        <input type="hidden" name="_captcha" value="false">
+        <input type="hidden" name="_next" value="thankyou.html">
+
+        <div>
+          <label class="block text-sm font-medium mb-1">Name</label>
+          <input type="text" name="name" required class="w-full border border-gray-300 rounded-lg px-4 py-2 focus:ring-2 focus:ring-blue-700">
+        </div>
+        <div>
+          <label class="block text-sm font-medium mb-1">Email</label>
+          <input type="email" name="email" required class="w-full border border-gray-300 rounded-lg px-4 py-2 focus:ring-2 focus:ring-blue-700">
+        </div>
+        <div>
+          <label class="block text-sm font-medium mb-1">Message</label>
+          <textarea name="message" rows="5" required class="w-full border border-gray-300 rounded-lg px-4 py-2 focus:ring-2 focus:ring-blue-700"></textarea>
+        </div>
+        <button type="submit" class="w-full bg-blue-700 text-white py-3 px-4 rounded-lg font-semibold hover:bg-blue-800 transition">
+          Send Message
+        </button>
+      </form>
+    </div>
+
+    <!-- Contact Info -->
+    <div class="space-y-6">
+      <h3 class="text-2xl font-bold mb-6">Contact Information</h3>
+      <p class="text-gray-600">Reach us directly through phone, email, or visit our office.</p>
+
+      <div class="flex items-center space-x-4">
+        <i class="fa-solid fa-phone text-blue-700 text-xl"></i>
+        <span id="company-phone">(123) 456-7890</span>
+      </div>
+      <div class="flex items-center space-x-4">
+        <i class="fa-solid fa-envelope text-blue-700 text-xl"></i>
+        <span id="company-email">info@company.com</span>
+      </div>
+      <div class="flex items-center space-x-4">
+        <i class="fa-solid fa-location-dot text-blue-700 text-xl"></i>
+        <span id="company-address">123 Main St, City, State</span>
+      </div>
+    </div>
+  </main>
 
   <!-- Footer -->
   <footer class="bg-gray-800 text-white text-center py-6">
     <p>&copy; 2025 <span id="company-name-footer">Company</span>. All rights reserved.</p>
   </footer>
 
-  <!-- Script to Load Email from JSON -->
-   
+  <!-- Script to Load JSON -->
   <script>
     async function loadCompanyInfo() {
-      jsonFileDir = '../jsonfiles/';
-      const companyRes = await fetch(`${jsonFileDir}companyinfo.json`);
-      const companyData = await companyRes.json();
-
-
-      // Company name
-      document.getElementById('company-name').innerText = companyData.name;
-      document.getElementById('company-name-footer').innerText = companyData.name;
-
-
-    }
-    async function loadCompanyContact() {
-      
+      const jsonFileDir = '../jsonfiles/';
       try {
-        const res = await fetch('../jsonfiles/companyinfo.json');
-        const data = await res.json();
-        const form = document.getElementById('contact-form');
-        form.action = `https://formsubmit.co/${data.email}`;
-        document.title = `Contact ${data.name}`;
+        const companyRes = await fetch(`${jsonFileDir}companyinfo.json`);
+        const data = await companyRes.json();
+
+        // Update dynamic fields
+        document.getElementById('company-name').innerText = data.name;
+        document.getElementById('company-name-footer').innerText = data.name;
+        document.getElementById('company-phone').innerText = data.phone;
+        document.getElementById('company-phone-link').href = `tel:${data.phone}`;
+        document.getElementById('company-email').innerText = data.email;
+        document.getElementById('company-address').innerText = data.address;
+
+        // Form action
+        document.getElementById('contact-form').action = `https://formsubmit.co/${data.email}`;
       } catch (err) {
-        console.error('Error loading companyinfo.json:', err);
+        console.error('Error loading company info:', err);
       }
     }
 
-    window.onload = () => {
-      loadCompanyContact();
-      loadCompanyInfo();
-    };
+    window.onload = loadCompanyInfo;
   </script>
-
 </body>
 </html>
