--- a/pages/projects.html
+++ b/pages/projects.html
@@ -1,9 +1,10 @@
+<!-- ---- /projects.html ---- -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Our Projects</title>
+  <title>Projects</title>
   <script src="https://cdn.tailwindcss.com"></script>
   <script>
     tailwind.config = {
@@ -16,6 +17,7 @@
       }
     };
   </script>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;800&display=swap" rel="stylesheet">
 </head>
 <body class="bg-gray-50 text-gray-800 font-sans">
@@ -23,19 +25,32 @@
   <!-- Header -->
   <header class="sticky top-0 bg-white shadow z-50">
     <div class="max-w-7xl mx-auto px-4 py-4 flex justify-between items-center">
-      <a href="index.html" class="hover:opacity-80 transition">
+      <a href="index.html" class="flex items-center gap-2 hover:opacity-80 transition">
+        <img src="assets/logo.png" alt="Logo" class="h-10 w-auto">
         <h1 id="company-name" class="text-2xl font-bold text-blue-700">Loading...</h1>
       </a>
-      <nav class="space-x-6 text-sm font-semibold">
-        <a href="services.html" class="hover:text-blue-700">Services</a>
-        <a href="#" class="text-blue-700 underline">Projects</a>
-        <a href="contact.html" class="hover:text-blue-700">Contact</a>
-      </nav>
+      <div class="flex items-center space-x-6">
+        <nav class="hidden md:flex space-x-6 text-sm font-semibold">
+          <a href="services.html" class="hover:text-blue-700">Services</a>
+          <a href="projects.html" class="text-blue-700 font-semibold">Projects</a>
+          <a href="contact.html" class="hover:text-blue-700">Contact</a>
+        </nav>
+        <a href="tel:+1234567890" id="company-phone-link" class="hidden md:block font-bold text-blue-700">Call Us</a>
+        <a href="contact.html" class="bg-blue-700 text-white px-4 py-2 rounded shadow hover:bg-blue-800 transition">Get a Quote</a>
+      </div>
     </div>
   </header>
 
+  <!-- Hero Section -->
+  <section class="bg-blue-700 text-white py-24 text-center">
+    <div class="max-w-3xl mx-auto px-4">
+      <h2 class="text-4xl md:text-5xl font-extrabold mb-4">Our Projects</h2>
+      <p class="text-lg md:text-xl">Explore our commercial and residential work.</p>
+    </div>
+  </section>
+
   <!-- Commercial Projects -->
-  <section id="commercialProjects" class="py-20 bg-gray-50">
+  <section id="commercialProjects" class="py-20 bg-white">
     <div class="max-w-6xl mx-auto px-4 text-center">
       <h3 class="text-3xl font-bold mb-12">Commercial Projects</h3>
       <div id="commercial-container" class="grid md:grid-cols-3 gap-8">
@@ -63,37 +78,44 @@
   <script>
     async function loadProjects() {
       const jsonFileDir = '../jsonfiles/';
-      const companyRes = await fetch(`${jsonFileDir}companyinfo.json`);
-      const companyData = await companyRes.json();
+      try {
+        const companyRes = await fetch(`${jsonFileDir}companyinfo.json`);
+        const companyData = await companyRes.json();
 
-      const projectsRes = await fetch(`${jsonFileDir}projects.json`);
-      const projectsData = await projectsRes.json();
+        const projectsRes = await fetch(`${jsonFileDir}projects.json`);
+        const projectsData = await projectsRes.json();
 
-      document.getElementById('company-name').innerText = companyData.name;
-      document.getElementById('company-name-footer').innerText = companyData.name;
+        // Company info
+        document.getElementById('company-name').innerText = companyData.name;
+        document.getElementById('company-name-footer').innerText = companyData.name;
+        document.getElementById('company-phone-link').href = `tel:${companyData.phone}`;
 
-      projectsData.projects.forEach(project => {
-        const containerId = project.type === "Commercial" ? 'commercial-container' : 'residential-container';
-        const container = document.getElementById(containerId);
+        // Projects
+        projectsData.projects.forEach(project => {
+          const containerId = project.type === "Commercial" ? 'commercial-container' : 'residential-container';
+          const container = document.getElementById(containerId);
 
-        // Support image as string or array
-        const image = Array.isArray(project.image) ? project.image[0] : project.image;
+          // Support image as string or array
+          const image = Array.isArray(project.image) ? project.image[0] : project.image;
 
-        const div = document.createElement('div');
-        div.className = "bg-white shadow rounded overflow-hidden";
+          const div = document.createElement('div');
+          div.className = "bg-white shadow rounded overflow-hidden hover:shadow-lg transition";
 
-        div.innerHTML = `
-          <a href="project.html?id=${project.id}" class="block hover:shadow-lg transition">
-            <img src="${image}" alt="${project.title}" class="w-full h-48 object-cover">
-            <div class="p-4">
-              <h4 class="font-semibold text-lg mb-2">${project.title}</h4>
-              <p class="text-sm">${project.description}</p>
-            </div>
-          </a>
-        `;
+          div.innerHTML = `
+            <a href="project.html?id=${project.id}" class="block">
+              <img src="${image}" alt="${project.title}" class="w-full h-48 object-cover">
+              <div class="p-4 text-left">
+                <h4 class="font-semibold text-lg mb-2">${project.title}</h4>
+                <p class="text-sm text-gray-600">${project.description}</p>
+              </div>
+            </a>
+          `;
 
-        container.appendChild(div);
-      });
+          container.appendChild(div);
+        });
+      } catch (err) {
+        console.error("Error loading projects:", err);
+      }
     }
 
     window.onload = loadProjects;
