--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,6 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
   <title>Contact</title>
   <script src="https://cdn.tailwindcss.com"></script>
   <script>
@@ -18,6 +17,7 @@
       }
     };
   </script>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;800&display=swap" rel="stylesheet">
 </head>
 <body class="bg-gray-50 text-gray-800 font-sans">
@@ -33,7 +33,6 @@
         <nav class="hidden md:flex space-x-6 text-sm font-semibold">
           <a href="services.html" class="hover:text-blue-700">Services</a>
           <a href="projects.html" class="hover:text-blue-700">Projects</a>
-          <a href="contact.html" class="text-blue-700 font-semibold">Contact</a>
         </nav>
         <a href="tel:+1234567890" id="company-phone-link" class="hidden md:block font-bold text-blue-700">Call Us</a>
         <a href="contact.html" class="bg-blue-700 text-white px-4 py-2 rounded shadow hover:bg-blue-800 transition">Get a Quote</a>
@@ -51,6 +50,7 @@
 
   <!-- Contact Section -->
   <main class="max-w-6xl mx-auto px-4 py-20 grid grid-cols-1 md:grid-cols-2 gap-12">
+    
     <!-- Contact Form -->
     <div>
       <h3 class="text-2xl font-bold mb-6">Send Us a Message</h3>
@@ -60,17 +60,21 @@
 
         <div>
           <label class="block text-sm font-medium mb-1">Name</label>
-          <input type="text" name="name" required class="w-full border border-gray-300 rounded-lg px-4 py-2 focus:ring-2 focus:ring-blue-700">
+          <input type="text" name="name" required 
+            class="w-full border border-gray-300 rounded-lg px-4 py-2 focus:ring-2 focus:ring-blue-700">
         </div>
         <div>
           <label class="block text-sm font-medium mb-1">Email</label>
-          <input type="email" name="email" required class="w-full border border-gray-300 rounded-lg px-4 py-2 focus:ring-2 focus:ring-blue-700">
+          <input type="email" name="email" required 
+            class="w-full border border-gray-300 rounded-lg px-4 py-2 focus:ring-2 focus:ring-blue-700">
         </div>
         <div>
           <label class="block text-sm font-medium mb-1">Message</label>
-          <textarea name="message" rows="5" required class="w-full border border-gray-300 rounded-lg px-4 py-2 focus:ring-2 focus:ring-blue-700"></textarea>
+          <textarea name="message" rows="5" required 
+            class="w-full border border-gray-300 rounded-lg px-4 py-2 focus:ring-2 focus:ring-blue-700"></textarea>
         </div>
-        <button type="submit" class="w-full bg-blue-700 text-white py-3 px-4 rounded-lg font-semibold hover:bg-blue-800 transition">
+        <button type="submit" 
+          class="w-full bg-blue-700 text-white py-3 px-4 rounded-lg font-semibold hover:bg-blue-800 transition">
           Send Message
         </button>
       </form>
