--- a/services/services.html
+++ b/services/services.html
@@ -1,10 +1,10 @@
-<!-- ---- /projects.html ---- -->
+<!-- ---- /services.html ---- -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Projects</title>
+  <title>Services</title>
   <script src="https://cdn.tailwindcss.com"></script>
   <script>
     tailwind.config = {
@@ -31,8 +31,8 @@
       </a>
       <div class="flex items-center space-x-6">
         <nav class="hidden md:flex space-x-6 text-sm font-semibold">
-          <a href="services.html" class="hover:text-blue-700">Services</a>
-          <a href="projects.html" class="text-blue-700 font-semibold">Projects</a>
+          <a href="services.html" class="text-blue-700 font-semibold">Services</a>
+          <a href="projects.html" class="hover:text-blue-700">Projects</a>
         </nav>
         <a href="tel:+1234567890" id="company-phone-link" class="hidden md:block font-bold text-blue-700">Call Us</a>
         <a href="contact.html" class="bg-blue-700 text-white px-4 py-2 rounded shadow hover:bg-blue-800 transition">Get a Quote</a>
@@ -43,27 +43,17 @@
   <!-- Hero Section -->
   <section class="bg-blue-700 text-white py-24 text-center">
     <div class="max-w-3xl mx-auto px-4">
-      <h2 class="text-4xl md:text-5xl font-extrabold mb-4">Our Projects</h2>
-      <p class="text-lg md:text-xl">Explore our commercial and residential work.</p>
+      <h2 class="text-4xl md:text-5xl font-extrabold mb-4">Our Services</h2>
+      <p class="text-lg md:text-xl">Comprehensive solutions for residential and commercial projects.</p>
     </div>
   </section>
 
-  <!-- Commercial Projects -->
-  <section id="commercialProjects" class="py-20 bg-white">
+  <!-- Services Section -->
+  <section id="services" class="py-20 bg-white">
     <div class="max-w-6xl mx-auto px-4 text-center">
-      <h3 class="text-3xl font-bold mb-12">Commercial Projects</h3>
-      <div id="commercial-container" class="grid md:grid-cols-3 gap-8">
-        <!-- Projects will load here -->
-      </div>
-    </div>
-  </section>
-
-  <!-- Residential Projects -->
-  <section id="residentialProjects" class="py-20 bg-gray-50">
-    <div class="max-w-6xl mx-auto px-4 text-center">
-      <h3 class="text-3xl font-bold mb-12">Residential Projects</h3>
-      <div id="residential-container" class="grid md:grid-cols-3 gap-8">
-        <!-- Projects will load here -->
+      <h3 class="text-3xl font-bold mb-12">What We Offer</h3>
+      <div id="services-container" class="grid md:grid-cols-2 gap-10 text-left">
+        <!-- Services will load here -->
       </div>
     </div>
   </section>
@@ -75,49 +65,42 @@
 
   <!-- Script to Load JSON -->
   <script>
-    async function loadProjects() {
-      const jsonFileDir = 'jsonfiles/';
+    async function loadServices() {
+      const jsonFileDir = '../jsonfiles/';
       try {
         const companyRes = await fetch(`${jsonFileDir}companyinfo.json`);
         const companyData = await companyRes.json();
 
-        const projectsRes = await fetch(`${jsonFileDir}projects.json`);
-        const projectsData = await projectsRes.json();
+        const servicesRes = await fetch(`${jsonFileDir}services.json`);
+        const servicesData = await servicesRes.json();
 
         // Company info
         document.getElementById('company-name').innerText = companyData.name;
         document.getElementById('company-name-footer').innerText = companyData.name;
         document.getElementById('company-phone-link').href = `tel:${companyData.phone}`;
 
-        // Projects
-        projectsData.projects.forEach(project => {
-          const containerId = project.type === "Commercial" ? 'commercial-container' : 'residential-container';
-          const container = document.getElementById(containerId);
-
-          // Support image as string or array
-          const image = Array.isArray(project.image) ? project.image[0] : project.image;
-
+        // Services
+        const serviceContainer = document.getElementById('services-container');
+        servicesData.services.forEach(service => {
           const div = document.createElement('div');
-          div.className = "bg-white shadow rounded overflow-hidden hover:shadow-lg transition";
+          div.className = "bg-white shadow rounded p-6 hover:shadow-lg transition";
 
           div.innerHTML = `
-            <a href="project.html?id=${project.id}" class="block">
-              <img src="${image}" alt="${project.title}" class="w-full h-48 object-cover">
-              <div class="p-4 text-left">
-                <h4 class="font-semibold text-lg mb-2">${project.title}</h4>
-                <p class="text-sm text-gray-600">${project.description}</p>
-              </div>
-            </a>
+            <div class="text-blue-700 mb-4">
+              <i class="${service.icon || 'fa-solid fa-briefcase'} text-3xl"></i>
+            </div>
+            <h4 class="text-xl font-semibold mb-2">${service.title}</h4>
+            <p class="text-gray-600">${service.longDescription}</p>
           `;
 
-          container.appendChild(div);
+          serviceContainer.appendChild(div);
         });
       } catch (err) {
-        console.error("Error loading projects:", err);
+        console.error("Error loading services:", err);
       }
     }
 
-    window.onload = loadProjects;
+    window.onload = loadServices;
   </script>
 
 </body>
