--- a/index.html
+++ b/index.html
@@ -23,22 +23,54 @@
 <body class="bg-gray-50 text-gray-800 font-sans">
 
 
-  <!-- Header -->
+<!-- Header -->
 <header class="sticky top-0 bg-blue-950 shadow z-50">
   <div class="max-w-7xl mx-auto px-4 py-4 flex justify-between items-center">
+    <!-- Logo + Name -->
     <a href="index.html" class="flex items-center gap-2 hover:opacity-80 transition">
       <img src="assets/logoimg.png" alt="Logo" class="h-12 w-auto">
       <h1 id="company-name" class="text-2xl font-bold text-blue-500">Loading...</h1>
     </a>
-    <div class="flex items-center space-x-6">
-      <nav class="hidden md:flex space-x-6 text-sm font-semibold text-blue-500">
+
+    <!-- Desktop Nav -->
+    <div class="hidden md:flex items-center space-x-6">
+      <nav class="flex space-x-6 text-sm font-semibold text-blue-500">
         <a href="services.html" class="hover:text-blue-400">Services</a>
         <a href="projects.html" class="hover:text-blue-400">Projects</a>
       </nav>
-      <a href="contact.html" class="bg-blue-500 text-white px-4 py-2 rounded shadow hover:bg-blue-600 transition">Get a Quote</a>
+      <a href="contact.html" class="bg-blue-500 text-white px-4 py-2 rounded shadow hover:bg-blue-600 transition">
+        Get a Quote
+      </a>
     </div>
+
+    <!-- Mobile Hamburger -->
+    <button id="mobile-menu-button" class="md:hidden text-blue-500 text-2xl focus:outline-none">
+      <i class="fa-solid fa-bars"></i>
+    </button>
+  </div>
+
+  <!-- Mobile Dropdown -->
+  <div id="mobile-menu" class="hidden md:hidden bg-blue-900 text-blue-100">
+    <nav class="flex flex-col space-y-2 px-4 py-4 text-sm font-semibold">
+      <a href="services.html" class="hover:text-blue-400">Services</a>
+      <a href="projects.html" class="hover:text-blue-400">Projects</a>
+      <a href="contact.html" class="bg-blue-500 text-white px-4 py-2 rounded shadow hover:bg-blue-600 transition w-fit">
+        Get a Quote
+      </a>
+    </nav>
   </div>
 </header>
+
+<!-- Script -->
+<script>
+  const menuBtn = document.getElementById('mobile-menu-button');
+  const mobileMenu = document.getElementById('mobile-menu');
+
+  menuBtn.addEventListener('click', () => {
+    mobileMenu.classList.toggle('hidden');
+  });
+</script>
+
 
 
   <!-- Hero Section -->
