new header color

--- a/contact.html
+++ b/contact.html
@@ -29,7 +29,7 @@
 
 
 <!-- Header -->
-<header class="sticky top-0 bg-blue-950 shadow z-50">
+<header class="sticky top-0 bg-[#273038] shadow z-50">
   <div class="max-w-7xl mx-auto px-4 py-4 flex justify-between items-center">
     <!-- Logo + Name -->
     <a href="index.html" class="flex items-center gap-2 hover:opacity-80 transition">
