--- a/contact.html
+++ b/contact.html
@@ -27,35 +27,34 @@
 </head>
 <body class="bg-gray-50 text-gray-800 font-sans">
 
-
 <!-- Header -->
 <header class="sticky top-0 bg-[#273038] shadow z-50">
   <div class="max-w-7xl mx-auto px-4 py-4 flex justify-between items-center">
     <!-- Logo + Name -->
     <a href="index.html" class="flex items-center gap-2 hover:opacity-80 transition">
       <img src="assets/logoimg.png" alt="Logo" class="h-12 w-auto">
-      <h1 id="company-name" class="text-2xl font-bold text-blue-500">Loading...</h1>
+      <h1 id="company-name" class="text-2xl font-bold text-white">Loading...</h1>
     </a>
 
     <!-- Desktop Nav -->
     <div class="hidden md:flex items-center space-x-6">
-      <nav class="flex space-x-6 text-sm font-semibold text-blue-500">
+      <nav class="flex space-x-6 text-sm font-semibold text-white">
         <a href="services.html" class="hover:text-blue-400">Services</a>
         <a href="projects.html" class="hover:text-blue-400">Projects</a>
       </nav>
-      <a href="contact.html" class="bg-blue-500 text-white px-4 py-2 rounded shadow hover:bg-blue-600 transition">
+      <a href="contact.html" class="bg-white text-[#273038] px-4 py-2 rounded shadow hover:bg-blue-600 transition">
         Get a Quote
       </a>
     </div>
 
     <!-- Mobile Hamburger -->
-    <button id="mobile-menu-button" class="md:hidden text-blue-500 text-2xl focus:outline-none">
+    <button id="mobile-menu-button" class="md:hidden text-white text-2xl focus:outline-none">
       <i class="fa-solid fa-bars"></i>
     </button>
   </div>
 
   <!-- Mobile Dropdown -->
-  <div id="mobile-menu" class="hidden md:hidden bg-blue-900 text-blue-100">
+  <div id="mobile-menu" class="hidden md:hidden bg-[#273038] text-blue-100">
     <nav class="flex flex-col space-y-2 px-4 py-4 text-sm font-semibold">
       <a href="services.html" class="hover:text-blue-400">Services</a>
       <a href="projects.html" class="hover:text-blue-400">Projects</a>
@@ -77,9 +76,8 @@
 </script>
 
 
-
   <!-- Hero Section -->
-  <section class="bg-blue-950 text-white py-24 text-center">
+  <section class="bg-[#273038] text-white py-24 text-center">
     <div class="max-w-3xl mx-auto px-4">
       <h2 class="text-4xl md:text-5xl font-extrabold mb-4">Contact Us</h2>
       <p class="text-lg md:text-xl">We’d love to hear from you — let’s talk about your project!</p>
@@ -91,7 +89,7 @@
     
     <!-- Contact Form -->
     <div>
-      <h3 class="text-2xl font-bold mb-6 text-blue-700">Send Us a Message</h3>
+      <h3 class="text-2xl font-bold mb-6 text-[#273038]">Send Us a Message</h3>
       <form id="contact-form" method="POST" class="bg-white shadow rounded-lg p-6 space-y-4">
         <input type="hidden" name="_captcha" value="false">
         <input type="hidden" name="_next" value="thankyou.html">
@@ -120,19 +118,19 @@
 
     <!-- Contact Info -->
     <div class="space-y-6">
-      <h3 class="text-2xl font-bold mb-6 text-blue-700">Contact Information</h3>
-      <p class="text-gray-600">Reach us directly through phone, email, or visit our office.</p>
+      <h3 class="text-2xl font-bold mb-6 text-[#273038]">Contact Information</h3>
+      <p class="text-[#273038]">Reach us directly through phone, email, or visit our office.</p>
 
       <div class="flex items-center space-x-4">
-        <i class="fa-solid fa-phone text-blue-700 text-xl"></i>
+        <i class="fa-solid fa-phone text-[#273038] text-xl"></i>
         <span id="company-phone">(123) 456-7890</span>
       </div>
       <div class="flex items-center space-x-4">
-        <i class="fa-solid fa-envelope text-blue-700 text-xl"></i>
+        <i class="fa-solid fa-envelope text-[#273038] text-xl"></i>
         <span id="company-email">info@company.com</span>
       </div>
       <div class="flex items-center space-x-4">
-        <i class="fa-solid fa-location-dot text-blue-700 text-xl"></i>
+        <i class="fa-solid fa-location-dot text-[#273038] text-xl"></i>
         <span id="company-address">123 Main St, City, State</span>
       </div>
     </div>
