--- a/index.html
+++ b/index.html
@@ -29,28 +29,28 @@
     <!-- Logo + Name -->
     <a href="index.html" class="flex items-center gap-2 hover:opacity-80 transition">
       <img src="assets/logoimg.png" alt="Logo" class="h-12 w-auto">
-      <h1 id="company-name" class="text-2xl font-bold text-blue-500">Loading...</h1>
+      <h1 id="company-name" class="text-2xl font-bold text-white">Loading...</h1>
     </a>
 
     <!-- Desktop Nav -->
     <div class="hidden md:flex items-center space-x-6">
-      <nav class="flex space-x-6 text-sm font-semibold text-blue-500">
+      <nav class="flex space-x-6 text-sm font-semibold text-white">
         <a href="services.html" class="hover:text-blue-400">Services</a>
         <a href="projects.html" class="hover:text-blue-400">Projects</a>
       </nav>
-      <a href="contact.html" class="bg-blue-500 text-white px-4 py-2 rounded shadow hover:bg-blue-600 transition">
+      <a href="contact.html" class="bg-white text-[#273038] px-4 py-2 rounded shadow hover:bg-blue-600 transition">
         Get a Quote
       </a>
     </div>
 
     <!-- Mobile Hamburger -->
-    <button id="mobile-menu-button" class="md:hidden text-blue-500 text-2xl focus:outline-none">
+    <button id="mobile-menu-button" class="md:hidden text-white text-2xl focus:outline-none">
       <i class="fa-solid fa-bars"></i>
     </button>
   </div>
 
   <!-- Mobile Dropdown -->
-  <div id="mobile-menu" class="hidden md:hidden bg-blue-900 text-blue-100">
+  <div id="mobile-menu" class="hidden md:hidden bg-[#273038] text-blue-100">
     <nav class="flex flex-col space-y-2 px-4 py-4 text-sm font-semibold">
       <a href="services.html" class="hover:text-blue-400">Services</a>
       <a href="projects.html" class="hover:text-blue-400">Projects</a>
@@ -74,11 +74,11 @@
 
 
   <!-- Hero Section -->
-  <section class="bg-blue-950 text-white py-24 text-center">
+  <section class="bg-[#273038] text-white py-24 text-center">
     <div class="relative z-10 max-w-3xl mx-auto px-4">
       <h2 id="tagline" class="text-4xl md:text-5xl font-extrabold mb-4">Loading...</h2>
       <p class="text-lg md:text-xl mb-6">Residential & Commercial Construction Experts</p>
-      <a href="contact.html" class="bg-white text-blue-700 font-bold py-3 px-6 rounded hover:bg-gray-200 transition">Request a Quote</a>
+      <a href="contact.html" class="bg-white text-blue-950 font-bold py-3 px-6 rounded hover:bg-gray-200 transition">Request a Quote</a>
     </div>
   </section>
 
@@ -151,7 +151,7 @@
 
         div.innerHTML = `
           <div class="flex flex-col items-start">
-            <div class="text-blue-700 mb-4">
+            <div class="text-[#273038] mb-4">
               <i class="${service.icon} text-3xl"></i>
             </div>
             <h4 class="text-xl font-semibold mb-2">${service.title}</h4>
@@ -170,7 +170,7 @@
         div.className = "bg-gray-300 shadow rounded overflow-hidden text-black";
         div.innerHTML = `
           <img src="${project.image}" alt="${project.title}" class="w-full h-48 object-cover">
-          <div class="p-4">
+          <div class="p-4 text-[#273038]">
             <h4 class="font-semibold text-lg mb-2">${project.title}</h4>
             <p class="text-sm">${project.description}</p>
           </div>`;
