--- a/projects.html
+++ b/projects.html
@@ -28,28 +28,28 @@
     <!-- Logo + Name -->
     <a href="index.html" class="flex items-center gap-2 hover:opacity-80 transition">
       <img src="assets/logoimg.png" alt="Logo" class="h-12 w-auto">
-      <h1 id="company-name" class="text-2xl font-bold text-blue-500">Loading...</h1>
+      <h1 id="company-name" class="text-2xl font-bold text-white">Loading...</h1>
     </a>
 
     <!-- Desktop Nav -->
     <div class="hidden md:flex items-center space-x-6">
-      <nav class="flex space-x-6 text-sm font-semibold text-blue-500">
+      <nav class="flex space-x-6 text-sm font-semibold text-white">
         <a href="services.html" class="hover:text-blue-400">Services</a>
         <a href="projects.html" class="hover:text-blue-400">Projects</a>
       </nav>
-      <a href="contact.html" class="bg-blue-500 text-white px-4 py-2 rounded shadow hover:bg-blue-600 transition">
+      <a href="contact.html" class="bg-white text-[#273038] px-4 py-2 rounded shadow hover:bg-blue-600 transition">
         Get a Quote
       </a>
     </div>
 
     <!-- Mobile Hamburger -->
-    <button id="mobile-menu-button" class="md:hidden text-blue-500 text-2xl focus:outline-none">
+    <button id="mobile-menu-button" class="md:hidden text-white text-2xl focus:outline-none">
       <i class="fa-solid fa-bars"></i>
     </button>
   </div>
 
   <!-- Mobile Dropdown -->
-  <div id="mobile-menu" class="hidden md:hidden bg-blue-900 text-blue-100">
+  <div id="mobile-menu" class="hidden md:hidden bg-[#273038] text-blue-100">
     <nav class="flex flex-col space-y-2 px-4 py-4 text-sm font-semibold">
       <a href="services.html" class="hover:text-blue-400">Services</a>
       <a href="projects.html" class="hover:text-blue-400">Projects</a>
@@ -59,6 +59,7 @@
     </nav>
   </div>
 </header>
+
 <!-- Script -->
 <script>
   const menuBtn = document.getElementById('mobile-menu-button');
@@ -68,9 +69,8 @@
     mobileMenu.classList.toggle('hidden');
   });
 </script>
-
   <!-- Hero Section -->
-  <section class="bg-blue-950 text-white py-24 text-center">
+  <section class="bg-[#273038] text-white py-24 text-center">
     <div class="max-w-3xl mx-auto px-4">
       <h2 class="text-4xl md:text-5xl font-extrabold mb-4">Our Projects</h2>
       <p class="text-lg md:text-xl">Explore our commercial and residential work.</p>
@@ -131,8 +131,8 @@
             <a href="project.html?id=${project.id}" class="block">
               <img src="${image}" alt="${project.title}" loading="lazy" class="w-full h-48 object-cover">
               <div class="p-4 text-left">
-                <h4 class="font-semibold text-lg mb-2 text-blue-700">${project.title}</h4>
-                <p class="text-sm text-gray-600">${project.description}</p>
+                <h4 class="font-semibold text-lg mb-2 text-[#273038]">${project.title}</h4>
+                <p class="text-sm text-[#273038]">${project.description}</p>
               </div>
             </a>
           `;
