--- a/contact.html
+++ b/contact.html
@@ -137,7 +137,7 @@
   </main>
 
   <!-- Footer -->
-  <footer class="bg-gray-800 text-white text-center py-6">
+  <footer class="bg-[#273038] text-white text-center py-6">
     <p>&copy; 2025 <span id="company-name-footer">Company</span>. All rights reserved.</p>
   </footer>
 
