no mor projects for now

--- a/services.html
+++ b/services.html
@@ -35,7 +35,7 @@
     <div class="hidden md:flex items-center space-x-6">
       <nav class="flex space-x-6 text-sm font-semibold text-white">
         <a href="services.html" class="hover:text-blue-400">Services</a>
-        <a href="projects.html" class="hover:text-blue-400">Projects</a>
+        <!-- <a href="projects.html" class="hover:text-blue-400">Projects</a> -->
       </nav>
       <a href="contact.html" class="bg-white text-[#273038] px-4 py-2 rounded shadow hover:bg-blue-600 transition">
         Get a Quote
@@ -52,7 +52,7 @@
   <div id="mobile-menu" class="hidden md:hidden bg-[#273038] text-blue-100">
     <nav class="flex flex-col space-y-2 px-4 py-4 text-sm font-semibold">
       <a href="services.html" class="hover:text-blue-400">Services</a>
-      <a href="projects.html" class="hover:text-blue-400">Projects</a>
+      <!-- <a href="projects.html" class="hover:text-blue-400">Projects</a> -->
       <a href="contact.html" class="bg-blue-500 text-white px-4 py-2 rounded shadow hover:bg-blue-600 transition w-fit">
         Get a Quote
       </a>
