--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <div class="hidden md:flex items-center space-x-6">
       <nav class="flex space-x-6 text-sm font-semibold text-white">
         <a href="services.html" class="hover:text-blue-400">Services</a>
-        <a href="projects.html" class="hover:text-blue-400">Projects</a>
+        <!-- <a href="projects.html" class="hover:text-blue-400">Projects</a> -->
       </nav>
       <a href="contact.html" class="bg-white text-[#273038] px-4 py-2 rounded shadow hover:bg-blue-600 transition">
         Get a Quote
@@ -53,7 +53,7 @@
   <div id="mobile-menu" class="hidden md:hidden bg-[#273038] text-blue-100">
     <nav class="flex flex-col space-y-2 px-4 py-4 text-sm font-semibold">
       <a href="services.html" class="hover:text-blue-400">Services</a>
-      <a href="projects.html" class="hover:text-blue-400">Projects</a>
+      <!-- <a href="projects.html" class="hover:text-blue-400">Projects</a> -->
       <a href="contact.html" class="bg-blue-500 text-white px-4 py-2 rounded shadow hover:bg-blue-600 transition w-fit">
         Get a Quote
       </a>
@@ -93,14 +93,14 @@
   </section>
 
   <!-- Projects Section -->
-  <section id="projects" class="py-20 bg-blue-950 text-white ">
+  <!-- <section id="projects" class="py-20 bg-blue-950 text-white ">
     <div class="max-w-6xl mx-auto px-4 text-center">
       <h3 class="text-3xl font-bold mb-12">Featured Projects</h3>
-      <div id="projects-container" class="grid md:grid-cols-3 gap-8">
+      <div id="projects-container" class="grid md:grid-cols-3 gap-8"> -->
         <!-- Projects will load here -->
-      </div>
+      <!-- </div>
     </div>
-  </section>
+  </section> -->
 
   <!-- Contact CTA -->
   <section id="contact" class="py-20 bg-blue-100 text-black text-center">
